// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<p
  data-key="2"
>
  Hello World
</p>
`;

exports[`renders renderEditor 1`] = `
<div>
  <p
    data-key="7"
  >
    Hello World
  </p>
</div>
`;

exports[`renders renderToArray 1`] = `
Array [
  <p
    data-key="12"
  >
    Hello World
  </p>,
]
`;
